[gd_scene load_steps=7 format=3 uid="uid://c5tm54wo7jsu3"]

[ext_resource type="Texture2D" uid="uid://c16n4jl0fh174" path="res://menu sprites/Меню настроек.jpg" id="1_djnxr"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_li4cc"]
[ext_resource type="FontFile" uid="uid://c302n8emoo2ik" path="res://Boogaloo-Regular.ttf" id="2_uhbl0"]
[ext_resource type="AudioStream" uid="uid://drdt61dueyo2r" path="res://audio/Фон.mp3" id="2_uhv5u"]
[ext_resource type="AudioStream" uid="uid://bwac6c3xbi0s7" path="res://audio/active.mp3" id="5_1j3kk"]
[ext_resource type="AudioStream" uid="uid://cr02eshcr8woa" path="res://audio/hover.mp3" id="6_gmac6"]

[node name="menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_li4cc")

[node name="МенюНастроек" type="Sprite2D" parent="."]
position = Vector2(574.889, 324.625)
scale = Vector2(0.604398, 0.604398)
texture = ExtResource("1_djnxr")

[node name="Continue" type="Button" parent="МенюНастроек"]
top_level = true
offset_left = 106.0
offset_top = 552.0
offset_right = 263.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.654902, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.909804, 0.423529, 0.423529, 1)
theme_override_colors/font_focus_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.905882, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.905882, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uhbl0")
theme_override_font_sizes/font_size = 50
text = "Continue"
flat = true

[node name="Sound on_off" type="Button" parent="МенюНастроек"]
top_level = true
offset_left = 256.0
offset_top = 553.0
offset_right = 511.0
offset_bottom = 623.0
theme_override_colors/font_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4, 0.509804, 1)
theme_override_colors/font_hover_color = Color(0.431373, 0.639216, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_disabled_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_fonts/font = ExtResource("2_uhbl0")
theme_override_font_sizes/font_size = 50
text = "Sound off"
flat = true

[node name="New_game" type="Button" parent="МенюНастроек"]
top_level = true
offset_left = 480.0
offset_top = 554.0
offset_right = 735.0
offset_bottom = 624.0
theme_override_colors/font_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4, 0.509804, 1)
theme_override_colors/font_hover_color = Color(0.431373, 0.639216, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_disabled_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_fonts/font = ExtResource("2_uhbl0")
theme_override_font_sizes/font_size = 50
text = "New game"
flat = true

[node name="Exit" type="Button" parent="МенюНастроек"]
top_level = true
offset_left = 659.0
offset_top = 557.0
offset_right = 914.0
offset_bottom = 627.0
theme_override_colors/font_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_pressed_color = Color(0, 0.4, 0.509804, 1)
theme_override_colors/font_hover_color = Color(0.431373, 0.639216, 0.694118, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_disabled_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_colors/font_outline_color = Color(0.164706, 0.529412, 0.627451, 1)
theme_override_fonts/font = ExtResource("2_uhbl0")
theme_override_font_sizes/font_size = 50
text = "Exit"
flat = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_uhv5u")
autoplay = true

[node name="active" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1j3kk")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_gmac6")

[connection signal="mouse_entered" from="МенюНастроек/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="МенюНастроек/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="МенюНастроек/Sound on_off" to="." method="_on_sound_on_off_mouse_entered"]
[connection signal="pressed" from="МенюНастроек/Sound on_off" to="." method="_on_sound_on_off_pressed"]
[connection signal="mouse_entered" from="МенюНастроек/New_game" to="." method="_on_new_game_mouse_entered"]
[connection signal="pressed" from="МенюНастроек/New_game" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="МенюНастроек/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="МенюНастроек/Exit" to="." method="_on_exit_pressed"]
